--- a/inst/book/references.bib
+++ b/inst/book/references.bib
@@ -572,3 +572,36 @@
 	publisher = {PMLR},
 	pages = {448{\textendash}456}
 }
+
+@article{torch,
+	title = {torch: Tensors and Neural Networks with 'GPU' Acceleration},
+	author = {Falbel, Daniel and Luraschi, Javier},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=torch}
+}
+
+@article{luz,
+	title = {luz: Higher Level 'API' for 'torch'},
+	author = {Falbel, Daniel},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=luz}
+}
+
+@article{torchvision,
+	title = {torchvision: Models, Datasets and Transformations for Images},
+	author = {Falbel, Daniel},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=torchvision}
+}
+
+@Manual{rcran,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2021},
+  url = {https://www.R-project.org/},
+}
