atualizacao das referencias

--- a/inst/book/assets/bib/captcha.bib
+++ b/inst/book/assets/bib/captcha.bib
@@ -386,6 +386,15 @@
   file = {C\:\\Users\\julio\\Zotero\\storage\\JT5KCESH\\books.html}
 }
 
+@book{kuhnFeatureEngineeringSelection2019a,
+  title = {Feature Engineering and Selection: {{A}} Practical Approach for Predictive Models},
+  shorttitle = {Feature Engineering and Selection},
+  author = {Kuhn, Max and Johnson, Kjell},
+  year = {2019},
+  publisher = {{CRC Press}},
+  file = {C\:\\Users\\julio\\Zotero\\storage\\JWQXB632\\books.html}
+}
+
 @article{kunchevaRestrictedSetClassification2017,
   title = {Restricted Set Classification: {{Who}} Is There?},
   shorttitle = {Restricted Set Classification},
