--- a/inst/book/references.bib
+++ b/inst/book/references.bib
@@ -605,3 +605,66 @@
   year = {2021},
   url = {https://www.R-project.org/},
 }
+
+@book{kuhn2019,
+	title = {Feature engineering and selection: A practical approach for predictive models},
+	author = {Kuhn, Max and Johnson, Kjell},
+	year = {2019},
+	date = {2019},
+	publisher = {CRC Press}
+}
+
+@article{tensorflow,
+	title = {tensorflow: R Interface to 'TensorFlow'},
+	author = {Allaire, JJ and Tang, Yuan},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=tensorflow}
+}
+
+@article{decryptr,
+	title = {decryptr: An extensible API for breaking captchas},
+	author = {Trecenti, Julio and Lente, Caio and Falbel, Daniel and Farhat, Milene and Vianna, Beatriz and Angelica, Evelin},
+	year = {2022},
+	date = {2022}
+}
+
+@article{reticulate,
+	title = {reticulate: Interface to 'Python'},
+	author = {Ushey, Kevin and Allaire, JJ and Tang, Yuan},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=reticulate}
+}
+
+@article{torch-2,
+	title = {torch: Tensors and Neural Networks with 'GPU' Acceleration},
+	author = {Falbel, Daniel and Luraschi, Javier},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=torch}
+}
+
+@article{piggyback,
+	title = {piggyback: Managing Larger Data on a GitHub Repository},
+	author = {Boettiger, Carl and Ho, Tan},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=piggyback}
+}
+
+@article{usethis,
+	title = {usethis: Automate Package and Project Setup},
+	author = {Wickham, Hadley and Bryan, Jennifer and Barrett, Malcolm},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=usethis}
+}
+
+@article{piggyback-2,
+	title = {piggyback: Managing Larger Data on a GitHub Repository},
+	author = {Boettiger, Carl and Ho, Tan},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=piggyback}
+}
